force-app/main/default/objects/Daily_Task__c/Daily_Task__c.object-meta.xml
<CustomObject>
    <label>Daily Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>