force-app/main/default/objects/Daily_Task__c/fields/isRecurring__c.field-meta.xml
<CustomField>
    <fullName>isRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>