force-app/main/default/objects/Daily_Task__c/fields/newTestTime__c.field-meta.xml
<CustomField>
    <fullName>newTestTime__c</fullName>
    <formula>LEFT(TEXT( TIMEVALUE(Scheduled_Time__c )+19800000 ), 2)+&apos;:&apos;+MID(TEXT( TIMEVALUE(Scheduled_Time__c )+19800000 ), 4, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>newTestTime</label>
    <type>Text</type>
</CustomField>