force-app/main/default/objects/Daily_Task__c/fields/Sprint_Element__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint Element</label>
    <referenceTo>Sprint_Element__c</referenceTo>
    <relationshipLabel>Daily Tasks</relationshipLabel>
    <relationshipName>Daily_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>