force-app/main/default/objects/Daily_Task__c/fields/Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Time__c</fullName>
    <formula>VALUE(LEFT(TEXT( TIMEVALUE(Scheduled_Time__c )+19800000 ), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>